# mcp-server-qdrant

./: README.md  README_UPDATE.md  claude_desktop_config.json  commit_real_time_connectors.sh  complete_social_integration.sh  debug_stdio.py  enhanced_mcp_server.py  integration_patch.diff  pyproject.toml  qdrant-mcp-guide.md  qdrant-mcp-summary.md  real-time-connectors-progress.md  run_mcp_server.py  run_mcp_server.sh  run_server.sh  semantic-clustering-implementation-status.md  setup_env.py  social-connectors-next-session.md  social_connectors_integration.md  social_connectors_integration_summary.md  update_enhanced_server.py
docs/: social-connectors.md
examples/: combined_social_search.py  mastodon_example.py  twitter_example.py
src/mcp_server_qdrant/: server.py  settings.py  social_mcp_server.py
src/mcp_server_qdrant/tools/: __init__.py
src/mcp_server_qdrant/tools/advanced_search/: __init__.py  fusion_search.py
src/mcp_server_qdrant/tools/analytics/: __init__.py  extract_cluster_topics.py  semantic_clustering.py
src/mcp_server_qdrant/tools/connectors/: __init__.py  mastodon_connector.py  rss_connector.py  twitter_connector.py
src/mcp_server_qdrant/tools/data_processing/: batch_embed.py  chunk_and_process.py
src/mcp_server_qdrant/tools/metadata/: __init__.py  extract_metadata.py
src/mcp_server_qdrant/tools/multilingual/: __init__.py  detect_language.py  multilingual_search.py  translate_text.py
src/mcp_server_qdrant/tools/social_connectors/: __init__.py
src/mcp_server_qdrant/tools/versioning/: __init__.py  get_document_history.py  version_document.py
src/mcp_server_qdrant/tools/visualization/: __init__.py  cluster_visualization.py  visualize_vectors.py
(+6 files in other folders)
