[project]
name = "mcp-server-qdrant"
version = "0.6.0"
description = "MCP server for retrieving context from a Qdrant vector database"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.4.1",  # Updated for compatibility with newer MCP SDK
    "qdrant-client[fastembed]>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "numpy>=1.20.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
analytics = [
    "scikit-learn>=1.0.2",
    "hdbscan>=0.8.29",
    "umap-learn>=0.5.3",
    "nltk>=3.7",
]
visualization = [
    "plotly>=5.10.0",
    "scikit-learn>=1.0.2",
    "umap-learn>=0.5.3",
]
multilingual = [
    "langdetect>=1.0.9",
    "deep-translator>=1.10.0",
]
connectors = [
    "feedparser>=6.0.0",
]
web = [
    "httpx>=0.23.0",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.9.0",
]
all = [
    "scikit-learn>=1.0.2",
    "hdbscan>=0.8.29",
    "umap-learn>=0.5.3",
    "nltk>=3.7",
    "plotly>=5.10.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.10.0",
    "feedparser>=6.0.0",
    "httpx>=0.23.0",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0"
]

[project.scripts]
mcp-server-qdrant = "mcp_server_qdrant.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
